<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WITTI</string>
    <string name="teamName"><u>Authored by Team Witty</u></string>
    <string name="about"><u>Authors:</u>\nBrianna Heersink\nBrian Smith\nAlex Warren\n\n
        <u>Created For:</u>\nECE 573\nThe University of Arizona</string>
    <string name="action_settings">Settings</string>
    <string name="launch">Launch</string>
    <string name="demo">Demo</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="generalCategory">General</string>
    <string name="launchCategory">Launch Mode</string>
    <string name="demoCategory">Demo Mode</string>
    <string name="resetSettingsTitle">Reset Settings</string>
    <string name="resetSettingsSummary">Click to restore all default settings</string>
    <string name="refreshSettingTitle">Auto-Refresh</string>
    <string name="refreshSummaryOff">Data will be refreshed manually</string>
    <string name="refreshSummaryOn">Data will be refreshed automatically</string>
    <string name="liveSettingTitle">Live Data</string>
    <string name="liveSummaryOff">Prerecorded data on the server will be used in launch mode</string>
    <string name="liveSummaryOn">Live data on the server will be used in launch mode</string>
    <string name="serverLocationTitle">Select Server Location</string>
    <string name="serverLocationDialog">Enter the desired web address of the server for Launch mode</string>
    <string name="defaultServerLocation">http://www.rhizomatos.com/static/lidar/</string>
    <string name="serverFileTitle">Select Server File</string>
    <string name="serverFileDialog">Enter the desired file name from server for Launch mode</string>
    <string name="defaultServerFile">sweep</string>
    <string name="defaultServerFrames">5</string>
    <string name="demoFileTitle">Select Demo File</string>
    <string name="demoFileDialog">Select the desired demo file to be visualized in Demo mode</string>
    <string name="defaultDemoFile">sweep</string>
    <string name="defaultDemoFrames">5</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="imageContent">imageContent</string>
    <string name="pathTracing">Path Drawing</string>
    <string name="displaySettingsText">Settings</string>
    <string name="displayOtherText">Other</string>
    <string name="displayRefreshText">Refresh</string>
    <string name="resetCameraText">Reset Camera</string>
</resources>
