<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory 
        android:title="@string/launchCategory"
        android:key="launchPreferencesKey">
	    <EditTextPreference
	        android:key="serverLocationSetting" 
	        android:title="@string/serverLocationTitle"
	        android:dialogTitle="@string/serverLocationDialog" 
	        android:defaultValue="@string/defaultServerLocation"/>
	    <EditTextPreference
	        android:key="serverFileSetting" 
	        android:title="@string/serverFileTitle"
	        android:dialogTitle="@string/serverFileDialog"
	        android:defaultValue="@string/defaultServerFile" />
	    <EditTextPreference
	        android:key="serverFramesSetting" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/demoCategory"
        android:key="demoPreferencesKey">
	    <ListPreference
	        android:key="demoFileSetting"
	        android:title="@string/demoFileTitle"
	        android:dialogTitle="@string/demoFileDialog" 
	        android:entries="@array/demoFileEntries"
            android:entryValues="@array/demoFileEntryValues"
            android:defaultValue="@string/defaultDemoFile" />
	    <EditTextPreference
	        android:key="demoFramesSetting"
	        android:defaultValue="@string/defaultDemoFrames" />
    </PreferenceCategory>
</PreferenceScreen>